<resources>
    <string name="app_name">ilumens</string>
    <string name="hello">Hello Paris</string>
    <string name="lets_go">Lets go</string>
    <string name="salut_iut_de_paris">Salut IUT de Paris</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="power_home">ilumens</string>
    <string name="logo_splash">logo_splash</string>
    <string name="slogan">mieux former pour mieux soigner</string>

    <!-- Login Activity Strings -->
    <string name="toolbar_title">Connectez-vous</string>
    <string name="identifiez_vous">Identifiez-vous</string>
    <string name="e_mail">E-mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="mot_de_passe_oubli">MOT DE PASSE OUBLIÉ ?</string>
    <string name="connectez_vous">CONNECTEZ-VOUS</string>
    <string name="nouveau_ilumens">Nouveau sur ilumens?</string>
    <string name="cree_compte">CRÉER UN COMPTE</string>
    <string name="ou">OU</string>
    <string name="continuer_avec_facebook">Continuer avec Facebook</string>
    <string name="nouveau_sur_ilumens">Nouveau sur ilumens?</string>
    <string name="retour_login">Retour</string>

    <!-- Register Activity Strings -->
    <string name="toolbar_title_register">Créer un compte</string>
    <string name="inscrivez_vous">Inscrivez-vous</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="confirmer_mot_de_passe">Confirmer le mot de passe</string>
    <string name="valider_inscription">VALIDER</string>
    <string name="deja_compte">Déjà un compte?</string>
    <string name="se_connecter">SE CONNECTER</string>
</resources>
